[package]
name = "rust-rest-api"
version = "0.1.0"
authors = ["tkorec <tomaskorec@icloud.com>"]
edition = "2018"

[dependencies]
actix-web = "3"
actix-rt = "1.1.1"
bson = "1.1.0"
serde = "1.0.117"
futures = "0.3.7"
env_logger = "0.8.1"
dotenv = "0.15.0"
actix-cors = "0.5.0"

[dependencies.mongodb]
version = "1.1.1"
default-features = false
features = ["sync"]
